fix: fixing some stuff and aligning

--- a/src/components/Payment/Payment.css
+++ b/src/components/Payment/Payment.css
@@ -54,8 +54,9 @@ input {
 
 .card-number {
 	position: absolute;
-	width: 609px;
-	height: 66px;
+	width: 530px;
+	height: 75px;
+	padding-left: 97px;
 	left: 88px;
 	top: 510px;
 	border: none;
@@ -158,8 +159,9 @@ input {
 
 .card-coupon {
 	position: absolute;
-	width: 609px;
-	height: 66px;
+	width: 530px;
+	height: 75px;
+	padding-left: 97px;
 	left: 88px;
 	top: 724px;
 	border: none;
@@ -187,6 +189,7 @@ input {
 	top: 20px;
 	left: 20px;
 	opacity: 75%;
+	padding-left: 75px;
 }
 
 .btn-1 {
